package imt.fil.a3.recherche.fj.parser;

public record FJField(String type, String name) {
}
