package imt.fil.a3.recherche.fj.parser;

public record FieldInit(String fieldName, String argumentName) {
}
