package imt.fil.a3.recherche.fj.parser.error;

/**
 * Type Error
 **/
public abstract class TypeError extends Throwable {
}
